* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.2
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Tue Jan 12 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.2
- Fix REFERENCE.md documentation
- Note sebool_use_nfs and sebool_cifs upcoming deprecation

* Tue Jan 12 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.2
- Removed EL6 support

* Wed Jul 29 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.4.1-0
- Update upper bound for vox_selinux to < 4.0.0

* Fri Jan 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.0-0
- Add EL8 support
- Update the upper bound of simp-simplib to < 5.0.0

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.4.0-0
- Support puppetlabs/concat 6.x.

* Thu Aug 01 2019 Mike Renfro <renfro@tntech.edu> - 6.3.0-0
- Add 'preserve_perms' attribute to allow users to disable the preservation of
  server-side permissions.
- If this flag is set to `false`, sets `chmod` to `u=rwX,g=rwX,o-rwx`

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.2.0-0
- Add v2 compliance_markup data
- Remove puppet 4 support
- Add puppet 6 support
- Add puppetlabs-stdlib 6 support

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated a URL in the README.md

* Wed Feb 20 2019 Adam Yohring <adam.yohrling@onyxpoint.com> - 6.1.1-0
- Modified class to support configuring SIMP rsync server and SIMP
  rsync client for same machine
- Combine `rsync::server::global` with `rsync::server`
- Add ability to use ports in rsync_server parameter

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Fixed a template bug that prevented catalogue compilation when
  rsync::server::section::user_pass was set
- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
  Puppet 3 function.

* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Added $package_ensure parameter