@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.2
 - Expanded simp/rsyslog dependendency range to < 9.0.0.
 
